Demesnes (#128)
* Add Demesnes: Apollo enclave isolate model for GraalVM

Seperate profile for now, as I can't figure out how to integrate it
normally into the build. For some reason, when properly parented to the
apollo.app of the build, the graalvm sdk classes are not included.  Very
odd.

* test GraalVM native build

* Enable GraalVM native image build of demesne default in CI

Holy flurkin' snit!

* move metadata repo dep to native image plugin

* add invocation of Fireflies scenario to pull in closure

* interim checkpoint.  Lotta work on graalVM native image.

Still stuck on javax.sql.rowset.RowSetProvider missing for some
inexplicable reason.  Clean otherwise (so far).

* missed this

* Seem to have resolved issues with JOOQ and GraalVM native image.

Got further, moving on to the next failure in the sql state machine

* Working full stack in Graal Isolate.

F*ck Yea.

* refactor to split enclave from isolate creation. update readmes

modules demesnes and isolates excluded by default, added with profile
"isolates"

* Get static imports + friends to support model.SubDomain

Got past the BouncyCastle Great Filter it seems.

* breakout

* v1

* on workflow_call

* :: sigh ::

* ?

* remove isolates for now. have to figure all that out

Seem to be creating isolate just fine.

* Break out Smokin.main() for testing. Put meat on the Demesnes skeleton

* split out domain socket support into seperate plat dependent modules

Had a heck of a time dealing with that when creating the isolate.

Isolate creation now does not use fallback

* prep for conversion to shared library isolate. SBOM gen support.

Some general clean up.

* remove Pal and PAL-D modules, as they can be replicated in simpler ways

* Move to GraalVM 22.3.0, JDK 19

* bump actual version to 19. add "--enable-preview" to compile/surefire

* :: sigh ::

Mostly cosmetic cleanup of poms.

* use actions/cache

* update version

*